# Halad-Alkalmazott-Programoz-s

./: README.md  main.cpp
1_feladat_gyok/: main.cpp
1_feladat_integral/: main.cpp
1_feldat_integral/: main.cpp
2_feladat/: main.cpp
3 _feladat/: main.cpp
3_feladat/: main1.cpp  main2.cpp
4.feladat/: vector2d.h
4_feladat/: main.cpp  vector2d.h
5.feladat/: main.cpp  matrix.h
5_feladat/: main.cpp  matrix.h
6_feladat/matrix/: main.cpp  matrix.h
6_feladat/vector2d/: main.cpp  vector2d.h
7.feladat/: data.txt  fit.txt  main.cpp
8.feladat/: data1.txt  data2.txt  data3.txt  main.cpp  matrix.h
9_feladat/game_of_life/: main.cpp
9_feladat/linear_regression/: main.cpp
beadando/: CMakeLists.txt  Leírás.txt  gnuplot.h  header.h  main.cpp
folder/: main.cpp  matrix.h
